baml_language/crates/baml_tests/snapshots/diagnostic_errors/headers_edge_cases/baml_tests__diagnostic_errors__headers_edge_cases__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
function user.ConsecutiveHeaders() -> string  [expr] {
  { // [1] First Header; // [1] Second Header; // [1] Third Header; // [2] Subsection A; // [2] Subsection B; // [2] Subsection C } "multiple consecut..."
}
function user.HeaderLevels() -> string  [expr] {
  { // [1] Level 1; // [2] Level 2; // [3] Level 3; // [4] Level 4; // [5] Level 5; // [6] Level 6; // [7] Level 7 - More than 6 levels; // [8] Level 8; // [9] Level 9 } "deep nesting"
}
function user.HeaderOnlyFunction() -> string  [expr] {
  { // [1] Just Headers; // [2] No Code; // [3] Only Documentation; // [4] Pure Annotation; // [5] No Expressions; // [6] Until The End } "default"
}
function user.HeadersAndComments() -> string  [expr] {
  { // [1] Header Before Comment; let x = "test"; // [2] Header After Comment; // [3] Header After Doc Comment } x
}
function user.HeadersAroundExpressions() -> string  [expr] {
  { // [1] Before Let; let x = 5; // [2] After Let; // [3] Before If; if (x Gt 0) { // [4] Inside If } x else { // [4] Inside Else } 0; // [3] After If; // [2] Before For; for let i in [1, 2, 3] { // [3] Inside For } i; // [2] After For; // [1] Final Section } x
}
function user.HeadersInComplexNesting() -> string  [expr] {
  { // [1] Main Function; let result = { // [2] Inside Block Expression; let inner = if (true) { // [3] Inside If True; let deep = { // [4] Very Deep Block } "deep value"; // [3] Back to If Level } deep else { // [3] Inside Else } "else value"; // [2] Back to Block Level } inner; // [1] Back to Function Level } result
}
function user.HeadersWithSpecialChars() -> string  [expr] {
  { // [1] Header-With-Dashes; // [2] Header_With_Underscores; // [3] Header.With.Dots; // [4] Header/With/Slashes; // [5] Header\With\Backslashes; // [6] Header|With|Pipes } "special chars"
}
function user.HeadersWithWhitespace() -> string  [expr] {
  { // [1] Extra Spaces Before Title; // [2] Mixed Tabs And Spaces; // [3] All Tabs; let x = "whitespace test"; // [1] Trailing Spaces; // [2] Multiple  Spaces  Between  Words } x
}
function user.UnicodeHeaders() -> string  [expr] {
  { // [1] 你好世界; // [2] Émojis 🎉🎊; // [3] Special «Characters» ™ } "test"
}
function user.VeryLongHeaderTitle() -> string  [expr] {
  { // [1] This Is An Extremely Long Header Title That Goes On And On And On And Contains Many Words To Test How The Parser Handles Very Long Header Titles That Might Span Multiple Lines In Some Editors But Should Still Be Parsed As A Single Header; // [2] Another Long Title With Special Characters !@#$%^&*()_+-=[]{}|;':",./<>? And Numbers 1234567890 } "long headers"
}
