baml_language/crates/baml_tests/snapshots/diagnostic_errors/headers_edge_cases/baml_tests__diagnostic_errors__headers_edge_cases__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== COMPILER2 DIAGNOSTICS ===
  [type] E0167

  ⚠ this condition is always truthy: a value of type `true` can never be falsy
    ╭─[edge_cases.baml:63:25]
 63 │         let inner = if (true) {
    ·                         ────
    ╰────
    ╭─[edge_cases.baml:73:16]
 73 │ ╭─▶         } else {
 74 │ │               //### Inside Else
 75 │ │               "else value"
 76 │ ├─▶         };
    · ╰──── this branch is unreachable
    ╰────

  [type] E0001

  × mismatched types
     ╭─[edge_cases.baml:109:47]
 109 │ ╭─▶ function HeadersAroundExpressions() -> string {
 110 │ │       //# Before Let
 111 │ │       let x = 5;
 112 │ │       //## After Let
 113 │ │   
 114 │ │       //### Before If
 115 │ │       if (x > 0) {
 116 │ │           //#### Inside If
 117 │ │           x
 118 │ │       } else {
 119 │ │           //#### Inside Else
 120 │ │           0
 121 │ │       }
 122 │ │       //### After If
 123 │ │   
 124 │ │       //## Before For
 125 │ │       for (let i in [1, 2, 3]) {
 126 │ │           //### Inside For
 127 │ │           i
 128 │ │       }
 129 │ │       //## After For
 130 │ │   
 131 │ │       //# Final Section
 132 │ │       x
 133 │ ├─▶ }
     · ╰──── expected `string`, found `int`
     ╰────
